--- a/views/dashboard.jade
+++ b/views/dashboard.jade
@@ -171,6 +171,10 @@ block content
               li(ng-repeat="request in ownRequests")
                 //request.eventID is an event object, not an ID, naming is due to database storage
                 a(href, ng-click="displayEventDetails(request.eventID)") {{ request.eventID.name }}
+                if('request.edits.length > 0')
+                  ul
+                    li(ng-repeat="editEvent in request.edits")
+                      a(href, ng-click="displayEventDetails(editEvent)") {{ editEvent.editor }}
             h4 Received Invitations
             ul(style='list-style-type: none; padding-left: 10px;')
               li(ng-repeat="request in pendingRequests")
