Fixing bugs and event PUD status.

--- a/views/dashboard.jade
+++ b/views/dashboard.jade
@@ -310,7 +310,7 @@ block content
                 | {{ selectedEvent.location }}
               p(ng-show="selectedEvent.pudDetails")
                 b To-Do
-                | {{ selectedEvent.pudDetails }}
+                | {{ " " + selectedEvent.pudDetails }}
             p
               b Calendar 
               | {{ selectedEvent.calendarName }}
