--- a/views/dashboard.jade
+++ b/views/dashboard.jade
@@ -155,7 +155,7 @@ block content
               input(type="text", ng-model="inputModUserEmail", list="emails")
               &nbsp;
               button.btn(ng-click="addModUsertoList()") Add User with Modify
-              ul
+              ul(style='list-style-type: none; padding-left: 10px;')
                 li(ng-repeat="modUserEmail in modUserList") {{ modUserEmail }}
               button.btn.btn-primary(ng-disabled="addModUserForm.$invalid", ng-click="addModUser()") Add Users with Modify
             br
