--- a/views/dashboard.jade
+++ b/views/dashboard.jade
@@ -88,13 +88,13 @@ block content
 
           #calendarDetailsWindow(ng-show="selector == 3")
             h3 {{ selectedCalendar.name }}
-            b Owner: 
+            b Owner 
             | {{ selectedCalendar.owner.name }}
             br
-            b Events: 
+            b Events 
             ul(style='list-style-type: none; padding-left: 10px;')
-              li(ng-repeat="event in localEvents | filter: selectedCalendar._id")
-                a(href ng-click="displayEventDetails(event)") {{ event.title }}
+              li(ng-repeat="event in selectedCalendar.events")
+                a(href ng-click="displayEventDetails(event)") {{ event.name }}
 
           #calendarOwnerDetailsWindow(ng-show="selector == 5")
             h3 {{ selectedCalendar.name }}
@@ -103,8 +103,8 @@ block content
             br
             b Events 
             ul(style='list-style-type: none; padding-left: 10px;')
-              li(ng-repeat="event in localEvents | filter: selectedCalendar._id")
-                a(href ng-click="displayEventDetails(event)") {{ event.title }}
+              li(ng-repeat="event in selectedCalendar.events")
+                a(href ng-click="displayEventDetails(event)") {{ event.name }}
             b Rules 
             ul(style='list-style-type: none; padding-left: 10px;')
               li(ng-repeat="rule in selectedCalendar.rules")
@@ -176,7 +176,7 @@ block content
                   span.glyphicon.glyphicon-arrow-down
             br
             a.btn.btn-primary(href, ng-click="createPudEvent()") New Task
-            br
+            | &nbsp;
             a.btn.btn-primary(href, ng-click="createNewEvent()") Create Event
           
           #eventInvites(ng-show="selector == 6")
@@ -340,6 +340,7 @@ block content
                   | {{ getUserEmail(userId) + ": " + selectedRequest.usersStatus[userId].status }}
         .row
           hr
+          | &nbsp;
           .btn-group
             button.btn.btn-primary.btn-sm(ng-disabled="!selectedEvent.canEditEvent", ng-click="editSelectedEvent()") Edit Event
             button.btn.btn-danger.btn-sm(ng-disabled="!selectedEvent.canEditEvent", ng-click="deleteSelectedEvent()") Delete Event
